src/objects/HSIDCredentials__mdt.object
<CustomObject>
    <fields>
        <fullName>API_User_Url__c</fullName>
        <label>API User Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Access_Token_Url__c</fullName>
        <label>Access Token Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Auth_Url__c</fullName>
        <label>Auth Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pfidpadapterid__c</fullName>
        <label>pfidpadapterid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>portal__c</fullName>
        <label>portal</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redirect_uri__c</fullName>
        <label>redirect uri</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>HSIDCredential</label>
    <pluralLabel>HSIDCredential</pluralLabel>
</CustomObject>